--- a/index.ipynb
+++ b/index.ipynb
@@ -53,32 +53,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    pass\n",
+    "    return 3*x\n",
+    "    \n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    pass\n",
+    "    return 3*3*x\n",
     "\n",
     "def three_x_y_at_six(x):\n",
-    "    pass\n",
+    "    return 3*6*x\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
-    "    pass"
+    "    return 3*9*x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_y_at_one(3) # 9\n",
     "three_x_y_at_three(3)# 27\n",
@@ -948,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
